<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    android:paddingTop="16dp"
    android:elevation="8dp"
    app:cardCornerRadius="4dp">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="2dp"
            android:text="Cadastro"
            android:textColor="@android:color/black"
            android:textSize="22sp"
            app:layout_constraintBottom_toBottomOf="@+id/view"
            app:layout_constraintEnd_toEndOf="@+id/layout_nome_completo"
            app:layout_constraintStart_toEndOf="@+id/view"
            app:layout_constraintTop_toTopOf="@+id/view" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/layout_nome_completo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            app:layout_constraintBottom_toTopOf="@+id/layout_email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_nome_completo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/activity_cadastro_msg_hint_full_name"
                android:inputType="textPersonName|textCapWords"
                android:maxLength="60" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/layout_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/layout_cpf"
            app:layout_constraintEnd_toEndOf="@+id/layout_nome_completo"
            app:layout_constraintStart_toStartOf="@+id/layout_nome_completo">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/activity_cadastro_msg_hint_email"
                android:inputType="textEmailAddress"
                android:maxLength="50" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/layout_cpf"
            android:layout_width="0dp"
            android:layout_height="54dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/layout_telefone"
            app:layout_constraintEnd_toEndOf="@+id/layout_email"
            app:layout_constraintStart_toStartOf="@+id/layout_email">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_cpf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/activity_cadastro_msg_hint_cpf"
                android:inputType="number"
                android:maxLength="11" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/layout_telefone"
            android:layout_width="0dp"
            android:layout_height="59dp"
            app:layout_constraintBottom_toTopOf="@+id/layout_dt_nascimento"
            app:layout_constraintEnd_toEndOf="@+id/layout_cpf"
            app:layout_constraintStart_toStartOf="@+id/layout_cpf">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_telefone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/activity_cadastro_msg_hint_telephone"
                android:inputType="phone" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/layout_dt_nascimento"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/layout_senha"
            app:layout_constraintEnd_toEndOf="@+id/layout_telefone"
            app:layout_constraintStart_toStartOf="@+id/layout_telefone">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_dt_nascimento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/activity_cadastro_msg_hint_date"
                android:inputType="date"
                app:counterMaxLength="10" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/layout_senha"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/layout_confirmar_senha"
            app:layout_constraintEnd_toEndOf="@+id/layout_dt_nascimento"
            app:layout_constraintStart_toStartOf="@+id/layout_dt_nascimento">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_senha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/activity_cadastro_msg_hint_password"
                android:inputType="textPassword"
                android:maxLength="20" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/layout_confirmar_senha"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            app:layout_constraintBottom_toTopOf="@+id/btn_signup"
            app:layout_constraintEnd_toEndOf="@+id/layout_senha"
            app:layout_constraintStart_toStartOf="@+id/layout_senha">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_confirmar_senha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/activity_cadastro_msg_hint_confirm_password"
                android:inputType="textPassword"
                android:maxLength="20" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_signup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:text="@string/activity_cadastro_btn_register"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


        <View
            android:id="@+id/view"
            android:layout_width="4dp"
            android:layout_height="32dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:background="@color/teal700"
            app:layout_constraintBottom_toTopOf="@+id/layout_nome_completo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/layout_nome_completo"
            app:layout_constraintTop_toTopOf="parent" />
    </android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>